# TaniejJedz

./: .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
backend/: .env.dev  Dockerfile  README.md  SPRINT_3_1_MANIFEST.md  SPRINT_3_2_MANIFEST.md  alembic.ini  check_menu.py  diag4platform.py  diag_glovo.py  diag_glovo_biggest_script.txt  diag_glovo_rsc_chunk_15.txt  diag_glovo_rsc_chunk_29.txt  diag_glovo_script.txt  diag_glovo_v2.py  diag_krakow.py  diag_pyszne.py  diag_pyszne_menu.py  diag_ubereats.py  diag_wolt.py  docker-compose.dev.yml  posty_sitemap_pipeline.py  pyproject.toml  requirements-scraper.txt  seed.py  test.py  test_wolt.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_platform_rest_geo.py  0003_menu_items_nullable.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: health.py
backend/app/cache/: cache_service.py  keys.py
backend/app/entity_resolution/: __init__.py  cross_reference.py  geocoding.py  matching_utils.py  menu_matcher.py  normalizers.py  restaurant_matcher.py
backend/app/jobs/: __init__.py  canary_scrape.py  compare_worker.py  crawl_menus.py  crawl_restaurants.py  db.py  enrich_ubereats.py  flush_analytics.py  nightly_pipeline.py  sync_glovo_slugs.py  sync_ubereats_slugs.py  warm_cache.py
backend/app/models/: __init__.py  analytics.py  base.py  city.py  comparison.py  delivery.py  feature_flag.py  feedback.py  menu.py  (+4 more)
backend/pg-init/: 01-extensions.sql
backend/tests/: test.py  test_glovo_sitemap_search.py  test_sync_glovo_slugs.py  test_ubereats_sitemap.py  test_ubereats_uuid_decode.py
(+176 files in other folders)
