[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taniejjedz-backend"
version = "0.1.0"
description = "TaniejJedz.pl — food delivery price comparator backend"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.30.0,<1.0",
    "uvloop>=0.19.0,<1.0",
    "sse-starlette>=2.1.0,<3.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.30,<2.1",
    "asyncpg>=0.29.0,<1.0",
    "alembic>=1.13.0,<2.0",
    # Validation / Settings
    "pydantic>=2.7.0,<3.0",
    "pydantic-settings>=2.3.0,<3.0",
    # Redis
    "redis[hiredis]>=5.0.0,<6.0",
    # Background jobs
    "dramatiq[redis]>=1.16.0,<2.0",
    # HTTP client (scraping)
    "httpx[http2]>=0.27.0,<1.0",
    # Entity resolution
    "rapidfuzz>=3.9.0,<4.0",
    # Rate limiting
    "slowapi>=0.1.9,<1.0",
    # Utilities
    "python-multipart>=0.0.9,<1.0",
    "orjson>=3.10.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0",
    "pytest-asyncio>=0.23.0,<1.0",
    "pytest-cov>=5.0.0,<6.0",
    "httpx>=0.27.0,<1.0",
    "ruff>=0.5.0,<1.0",
    "mypy>=1.10.0,<2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "app/scraper/tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
